Add props to Header.

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,6 @@
-.App-header {
-    background-color: green;
+header {
+    background-color: #222222;
+    color: whitesmoke;
+    padding: 15px 40px;
+    font-family: 'Courier New', Courier, monospace;
 }
